# HugeCTR

./: .clang-format  .codespellrc  .flake8_nb  .gitignore  .gitlab-ci.yml  .gitmodules  .nspect-vuln-allowlist.toml  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Doxyfile  README.md  build.sh  build_and_install_dependencies.sh  index.html  performance.md  release_notes.md  setup_dependencies.sh
HugeCTR/core/: CMakeLists.txt  buffer.cpp  buffer.hpp  core.hpp  datatype.cpp  datatype.hpp  device.cpp  device.hpp  macro.hpp  memory.hpp  mpi_lifetime_service.hpp  registry.hpp  shape.cpp  shape.hpp  tensor.cpp  tensor.hpp
HugeCTR/core23/: CMakeLists.txt  allocator.hpp  allocator_factory.cpp  allocator_factory.hpp  allocator_params.cpp  allocator_params.hpp  buffer.cpp  buffer.hpp  buffer_channel.cpp  buffer_channel.hpp  buffer_channel_helpers.cpp  buffer_channel_helpers.hpp  buffer_client.cpp  buffer_client.hpp  buffer_factory.cpp  buffer_factory.hpp  buffer_params.cpp  buffer_params.hpp  buffer_requirements.hpp  cuda_primitives.cuh  cuda_stream.hpp  curand_generator.hpp  data_type.cpp  data_type.hpp  data_type_helpers.cuh  device.cpp  device.hpp  device_guard.cpp  device_guard.hpp  device_type.cpp  device_type.hpp  error.hpp  kernel_params.cpp  kernel_params.hpp  logger.cpp  logger.hpp  low_level_primitives.cpp  low_level_primitives.cu  low_level_primitives.hpp  macros.hpp  (+14 more)
HugeCTR/embedding/: CMakeLists.txt  all2all_embedding_collection.cu  all2all_embedding_collection.hpp  common.cpp  common.hpp  data_parallel_embedding.cpp  data_parallel_embedding.hpp  dense_model_parallel_embedding.cpp  dense_model_parallel_embedding.hpp  embedding.cpp  embedding.hpp  embedding_collection.cpp  embedding_collection.cu  embedding_collection.hpp  embedding_data.cpp  embedding_data.hpp  embedding_planner.cpp  embedding_planner.hpp  embedding_table.hpp  hier_model_parallel_embedding.cpp  hier_model_parallel_embedding.hpp  localized_embedding.cpp  localized_embedding.hpp  model_parallel_embedding.cpp  model_parallel_embedding.hpp  view.hpp
HugeCTR/pybind/: CMakeLists.txt  add_dense_layer.cpp  add_dense_layer_perf_ext.cpp  add_input.cpp  add_sparse_embedding.cpp  common_wrapper.hpp  csr_chunk_wrapper.hpp  data_generator_wrapper.hpp  data_reader_wrapper.hpp  device_map_wrapper.hpp  embedding_training_cache_wrapper.hpp  heapex_wrapper.hpp  inference_wrapper.hpp  learning_rate_scheduler_wrapper.hpp  metrics_wrapper.hpp  mmap_offset_wrapper.hpp  model.cpp  model.hpp  model_oversubscriber_wrapper.hpp  model_perf_ext.cpp  model_perf_ext.hpp  model_perf_ext_wrapper.hpp  model_prefetcher_wrapper.hpp  model_wrapper.hpp  module_main.cpp  optimizer.cpp  optimizer.hpp  optimizer_wrapper.hpp  resource_manager_wrapper.hpp  session_wrapper.hpp  solver_parser_wrapper.hpp  solver_wrapper.hpp  third_party_wrapper.hpp  utils_wrapper.hpp
HugeCTR/src/: CMakeLists.txt  core23_network.cpp  cpu_resource.cpp  cuda_debugging.cu  data_collector.cu  data_collector_ex.cu  data_generator.cpp  data_parser.cpp  data_simulator.cu  diagnose.cu  embedding_creator.cu  exchange_wgrad.cpp  gpu_barrier.cu  gpu_learning_rate_scheduler.cu  gpu_resource.cpp  graph_wrapper.cpp  hdfs_backend.cpp  layer.cpp  logger.cpp  loss.cu  main.cpp  metadata.cpp  metrics.cu  network.cpp  network.cu  network_buffer_channels.cpp  optimizer.cpp  parquet_data_converter.cu  parser.cpp  pipeline.cpp  plan_parser.cpp  profiler.cpp  regularizer.cu  regularizer_factory.cpp  resource_manager.cpp  session.cpp  thread_pool.cpp  trainable_layer.cpp  utils.cu
benchmarks/core23/: CMakeLists.txt  random_allocations.cpp  tensor_container_performance.cu  tensor_performance.cu
hierarchical_parameter_server/: CMakeLists.txt  README.md  pyproject.toml  setup.py
hierarchical_parameter_server/cmakes/: FindTensorFlow.cmake
hierarchical_parameter_server/docs/: README.md  requirements-doc.txt
hierarchical_parameter_server/hierarchical_parameter_server/: __init__.py  hps_lib.py
hierarchical_parameter_server/notebooks/: README.md  dnn.json  hierarchical_parameter_server_demo.ipynb  hps_multi_table_sparse_input_demo.ipynb  hps_pretrained_model_training_demo.ipynb  hps_tensorflow_triton_deployment_demo.ipynb  sok_to_hps_dlrm_demo.ipynb
hps_torch/: CMakeLists.txt  README.md  hps_torch_plugin.cpp  setup.py
hps_torch/cmakes/: ClangFormat.cmake
hps_torch/hps_torch/: __init__.py  lookup_layer.py
hps_torch/notebooks/: README.md  hps_torch_demo.ipynb
hps_trt/: CMakeLists.txt  README.md
hps_trt/hpsPlugin/: hpsPlugin.cpp  hpsPlugin.h  trt_plugin_utils.h
hps_trt/hps_plugin/: hps_plugin.cpp  hps_plugin.hpp  trt_plugin_utils.hpp
hps_trt/notebooks/: README.md  benchmark_tf_trained_large_model.ipynb  demo_for_hugectr_trained_model.ipynb  demo_for_pytorch_trained_model.ipynb  demo_for_tf_trained_model.ipynb
sparse_operation_kit/: .gitignore  CMakeLists.txt  LICENSE.txt  MANIFEST.in  ReadMe.md  install.sh  profiling.sh  pyproject.toml  setup.py
sparse_operation_kit/Deprecated/: CMakeLists.txt  ReadMe.md  unit_test.py  unit_test_v2.py
sparse_operation_kit/SOK_DLRM_Benchmark/: README.md  dataset.py  main.py  model.py  trainer.py
sparse_operation_kit/cmakes/: FindTensorFlow.cmake
sparse_operation_kit/documents/: Makefile  ReadMe.md
sparse_operation_kit/example/: ReadMe.md
sparse_operation_kit/experiment/: CMakeLists.txt  README.md
sparse_operation_kit/kit_cc/: utils.h
sparse_operation_kit/master/: .buildinfo  genindex.html  index.html  intro_link.html  objects.inv  py-modindex.html  search.html  searchindex.js
sparse_operation_kit/notebooks/: README.md  ReadMe.md  benchmark.ipynb  demo_with_nvtabular_datareader.ipynb  embedding_plugin_deprecated.ipynb  hps_inference_dlrm_with_sok_weight_demo.ipynb  sok_dump_load_demo.ipynb  sok_incremental_dump_demo.ipynb  sok_train_dlrm_demo.ipynb  sparse_operation_kit_demo.ipynb
sparse_operation_kit/sok_v1.0.0/: .buildinfo  genindex.html  index.html  intro_link.html  py-modindex.html  search.html  searchindex.js
sparse_operation_kit/sok_v1.0.1/: genindex.html  index.html  search.html  searchindex.js
(+5821 files in other folders)
